# ChangeLog for dev-perl/Class-C3
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-C3/ChangeLog,v 1.1 2009/01/14 10:16:58 tove Exp $

*Class-C3-0.20 (14 Jan 2009)

  14 Jan 2009; Torsten Veller <tove@gentoo.org> +metadata.xml,
  +Class-C3-0.20.ebuild:
  Initial commit. From the perl overlay
