@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Class-C3
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-C3/ChangeLog,v 1.1 2009/01/14 10:16:58 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-C3/ChangeLog,v 1.2 2009/03/25 09:22:44 tove Exp $
+
+*Class-C3-0.21 (25 Mar 2009)
+
+  25 Mar 2009; Torsten Veller <tove@gentoo.org> +Class-C3-0.21.ebuild:
+  Version bump
 
 *Class-C3-0.20 (14 Jan 2009)
 
